--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(//weloveiconfonts.com/api/?family=zocial);@import url(https://fonts.googleapis.com/css?family=Josefin+Sans);@import url(https://fonts.googleapis.com/css?family=Righteous);*,
+@import url(http://weloveiconfonts.com/api/?family=zocial);@import url(https://fonts.googleapis.com/css?family=Josefin+Sans);@import url(https://fonts.googleapis.com/css?family=Righteous);*,
 *:after,
 *:before {
   -webkit-box-sizing: border-box;
